--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,22 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(rclpy REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
+# ament_python_install_package(${PROJECT_NAME})
+
 install(DIRECTORY launch config map
         DESTINATION share/${PROJECT_NAME})
+
+install(PROGRAMS
+  scripts/robot_position.py
+  scripts/waypoints_broadcaster_node.py
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
